feat: dataframe in limpieza

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -9,6 +9,389 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7a2174ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "cb24ee2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframe = pd.read_csv('./Data/RepublicaGuatemala.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "84960ce0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CODIGO</th>\n",
+       "      <th>DISTRITO</th>\n",
+       "      <th>DEPARTAMENTO</th>\n",
+       "      <th>MUNICIPIO</th>\n",
+       "      <th>ESTABLECIMIENTO</th>\n",
+       "      <th>DIRECCION</th>\n",
+       "      <th>TELEFONO</th>\n",
+       "      <th>SUPERVISOR</th>\n",
+       "      <th>DIRECTOR</th>\n",
+       "      <th>NIVEL</th>\n",
+       "      <th>SECTOR</th>\n",
+       "      <th>AREA</th>\n",
+       "      <th>STATUS</th>\n",
+       "      <th>MODALIDAD</th>\n",
+       "      <th>JORNADA</th>\n",
+       "      <th>PLAN</th>\n",
+       "      <th>DEPARTAMENTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>16-01-0138-46</td>\n",
+       "      <td>16-031</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "      <td>COBAN</td>\n",
+       "      <td>COLEGIO COBAN</td>\n",
+       "      <td>KM.2 SALIDA A SAN JUAN CHAMELCO ZONA 8</td>\n",
+       "      <td>77945104</td>\n",
+       "      <td>PATRICIO NAJARRO ASENCIO</td>\n",
+       "      <td>GUSTAVO ADOLFO SIERRA POP</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>PRIVADO</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>16-01-0139-46</td>\n",
+       "      <td>16-031</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "      <td>COBAN</td>\n",
+       "      <td>COLEGIO PARTICULAR MIXTO VERAPAZ</td>\n",
+       "      <td>KM 209.5 ENTRADA A LA CIUDAD</td>\n",
+       "      <td>77367402</td>\n",
+       "      <td>PATRICIO NAJARRO ASENCIO</td>\n",
+       "      <td>GILMA DOLORES GUAY PAZ DE LEAL</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>PRIVADO</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>16-01-0140-46</td>\n",
+       "      <td>16-031</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "      <td>COBAN</td>\n",
+       "      <td>COLEGIO \"LA INMACULADA\"</td>\n",
+       "      <td>7A. AVENIDA 11-109 ZONA 6</td>\n",
+       "      <td>78232301</td>\n",
+       "      <td>PATRICIO NAJARRO ASENCIO</td>\n",
+       "      <td>VIRGINIA SOLANO SERRANO</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>PRIVADO</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16-01-0141-46</td>\n",
+       "      <td>16-005</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "      <td>COBAN</td>\n",
+       "      <td>ESCUELA NACIONAL DE CIENCIAS COMERCIALES</td>\n",
+       "      <td>2A CALLE 11-10 ZONA 2</td>\n",
+       "      <td>79514215</td>\n",
+       "      <td>NORA LILIANA FIGUEROA HERNÁNDEZ</td>\n",
+       "      <td>HÉCTOR ROLANDO CHUN POOU</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>OFICIAL</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>16-01-0142-46</td>\n",
+       "      <td>16-005</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "      <td>COBAN</td>\n",
+       "      <td>INSTITUTO NORMAL MIXTO DEL NORTE 'EMILIO ROSAL...</td>\n",
+       "      <td>3A AVE 6-23 ZONA 11</td>\n",
+       "      <td>79521468</td>\n",
+       "      <td>NORA LILIANA FIGUEROA HERNÁNDEZ</td>\n",
+       "      <td>VICTOR HUGO DOMÍNGUEZ REYES</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>OFICIAL</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>BILINGUE</td>\n",
+       "      <td>VESPERTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ALTA VERAPAZ</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6602</th>\n",
+       "      <td>19-09-0040-46</td>\n",
+       "      <td>19-021</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "      <td>LA UNION</td>\n",
+       "      <td>LICEO PARTICULAR MIXTO \"JIREH\"</td>\n",
+       "      <td>BARRIO NUEVO</td>\n",
+       "      <td>79418369</td>\n",
+       "      <td>ASBEL IVÁN SÚCHITE ARROYO</td>\n",
+       "      <td>ANA MARÍA CUELLAR GUERRA</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>PRIVADO</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6603</th>\n",
+       "      <td>19-09-0048-46</td>\n",
+       "      <td>19-021</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "      <td>LA UNION</td>\n",
+       "      <td>LICEO PARTICULAR MIXTO \"JIREH\"</td>\n",
+       "      <td>BARRIO NUEVO</td>\n",
+       "      <td>79418369</td>\n",
+       "      <td>ASBEL IVÁN SÚCHITE ARROYO</td>\n",
+       "      <td>ANA MARÍA CUELLAR GUERRA</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>PRIVADO</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>SIN JORNADA</td>\n",
+       "      <td>SEMIPRESENCIAL (UN DÍA A LA SEMANA)</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6604</th>\n",
+       "      <td>19-10-0013-46</td>\n",
+       "      <td>19-015</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "      <td>HUITE</td>\n",
+       "      <td>INSTITUTO DIVERSIFICADO</td>\n",
+       "      <td>BARRIO BUENOS AIRES</td>\n",
+       "      <td>48579171</td>\n",
+       "      <td>SILDY MARIELA PEREZ FRANCO</td>\n",
+       "      <td>WUENDY JHOJANA SIERRA PAZ</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>OFICIAL</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>NOCTURNA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6605</th>\n",
+       "      <td>19-10-1009-46</td>\n",
+       "      <td>19-015</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "      <td>HUITE</td>\n",
+       "      <td>INSTITUTO DIVERSIFICADO POR COOPERATIVA</td>\n",
+       "      <td>BARRIO EL CAMPO</td>\n",
+       "      <td>55958103</td>\n",
+       "      <td>SILDY MARIELA PEREZ FRANCO</td>\n",
+       "      <td>ROBIDIO PORTILLO SALGUERO</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>COOPERATIVA</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>VESPERTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6606</th>\n",
+       "      <td>19-11-0018-46</td>\n",
+       "      <td>19-020</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "      <td>SAN JORGE</td>\n",
+       "      <td>INSTITUTO MIXTO DE EDUCACIÓN DIVERSIFICADA POR...</td>\n",
+       "      <td>BARRIO EL CENTRO</td>\n",
+       "      <td>41447589</td>\n",
+       "      <td>ALBA LUZ MENDEZ</td>\n",
+       "      <td>VICTOR HUGO GUERRA MONROY</td>\n",
+       "      <td>DIVERSIFICADO</td>\n",
+       "      <td>COOPERATIVA</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>ABIERTA</td>\n",
+       "      <td>MONOLINGUE</td>\n",
+       "      <td>MATUTINA</td>\n",
+       "      <td>DIARIO(REGULAR)</td>\n",
+       "      <td>ZACAPA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6607 rows × 17 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             CODIGO DISTRITO  DEPARTAMENTO  MUNICIPIO  \\\n",
+       "0     16-01-0138-46   16-031  ALTA VERAPAZ      COBAN   \n",
+       "1     16-01-0139-46   16-031  ALTA VERAPAZ      COBAN   \n",
+       "2     16-01-0140-46   16-031  ALTA VERAPAZ      COBAN   \n",
+       "3     16-01-0141-46   16-005  ALTA VERAPAZ      COBAN   \n",
+       "4     16-01-0142-46   16-005  ALTA VERAPAZ      COBAN   \n",
+       "...             ...      ...           ...        ...   \n",
+       "6602  19-09-0040-46   19-021        ZACAPA   LA UNION   \n",
+       "6603  19-09-0048-46   19-021        ZACAPA   LA UNION   \n",
+       "6604  19-10-0013-46   19-015        ZACAPA      HUITE   \n",
+       "6605  19-10-1009-46   19-015        ZACAPA      HUITE   \n",
+       "6606  19-11-0018-46   19-020        ZACAPA  SAN JORGE   \n",
+       "\n",
+       "                                        ESTABLECIMIENTO  \\\n",
+       "0                                         COLEGIO COBAN   \n",
+       "1                      COLEGIO PARTICULAR MIXTO VERAPAZ   \n",
+       "2                               COLEGIO \"LA INMACULADA\"   \n",
+       "3              ESCUELA NACIONAL DE CIENCIAS COMERCIALES   \n",
+       "4     INSTITUTO NORMAL MIXTO DEL NORTE 'EMILIO ROSAL...   \n",
+       "...                                                 ...   \n",
+       "6602                     LICEO PARTICULAR MIXTO \"JIREH\"   \n",
+       "6603                     LICEO PARTICULAR MIXTO \"JIREH\"   \n",
+       "6604                            INSTITUTO DIVERSIFICADO   \n",
+       "6605            INSTITUTO DIVERSIFICADO POR COOPERATIVA   \n",
+       "6606  INSTITUTO MIXTO DE EDUCACIÓN DIVERSIFICADA POR...   \n",
+       "\n",
+       "                                   DIRECCION  TELEFONO  \\\n",
+       "0     KM.2 SALIDA A SAN JUAN CHAMELCO ZONA 8  77945104   \n",
+       "1               KM 209.5 ENTRADA A LA CIUDAD  77367402   \n",
+       "2                  7A. AVENIDA 11-109 ZONA 6  78232301   \n",
+       "3                      2A CALLE 11-10 ZONA 2  79514215   \n",
+       "4                        3A AVE 6-23 ZONA 11  79521468   \n",
+       "...                                      ...       ...   \n",
+       "6602                            BARRIO NUEVO  79418369   \n",
+       "6603                            BARRIO NUEVO  79418369   \n",
+       "6604                     BARRIO BUENOS AIRES  48579171   \n",
+       "6605                         BARRIO EL CAMPO  55958103   \n",
+       "6606                        BARRIO EL CENTRO  41447589   \n",
+       "\n",
+       "                           SUPERVISOR                        DIRECTOR  \\\n",
+       "0            PATRICIO NAJARRO ASENCIO       GUSTAVO ADOLFO SIERRA POP   \n",
+       "1            PATRICIO NAJARRO ASENCIO  GILMA DOLORES GUAY PAZ DE LEAL   \n",
+       "2            PATRICIO NAJARRO ASENCIO         VIRGINIA SOLANO SERRANO   \n",
+       "3     NORA LILIANA FIGUEROA HERNÁNDEZ        HÉCTOR ROLANDO CHUN POOU   \n",
+       "4     NORA LILIANA FIGUEROA HERNÁNDEZ     VICTOR HUGO DOMÍNGUEZ REYES   \n",
+       "...                               ...                             ...   \n",
+       "6602        ASBEL IVÁN SÚCHITE ARROYO        ANA MARÍA CUELLAR GUERRA   \n",
+       "6603        ASBEL IVÁN SÚCHITE ARROYO        ANA MARÍA CUELLAR GUERRA   \n",
+       "6604       SILDY MARIELA PEREZ FRANCO       WUENDY JHOJANA SIERRA PAZ   \n",
+       "6605       SILDY MARIELA PEREZ FRANCO       ROBIDIO PORTILLO SALGUERO   \n",
+       "6606                  ALBA LUZ MENDEZ       VICTOR HUGO GUERRA MONROY   \n",
+       "\n",
+       "              NIVEL       SECTOR    AREA   STATUS   MODALIDAD      JORNADA  \\\n",
+       "0     DIVERSIFICADO      PRIVADO  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "1     DIVERSIFICADO      PRIVADO  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "2     DIVERSIFICADO      PRIVADO  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "3     DIVERSIFICADO      OFICIAL  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "4     DIVERSIFICADO      OFICIAL  URBANA  ABIERTA    BILINGUE   VESPERTINA   \n",
+       "...             ...          ...     ...      ...         ...          ...   \n",
+       "6602  DIVERSIFICADO      PRIVADO  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "6603  DIVERSIFICADO      PRIVADO  URBANA  ABIERTA  MONOLINGUE  SIN JORNADA   \n",
+       "6604  DIVERSIFICADO      OFICIAL  URBANA  ABIERTA  MONOLINGUE     NOCTURNA   \n",
+       "6605  DIVERSIFICADO  COOPERATIVA  URBANA  ABIERTA  MONOLINGUE   VESPERTINA   \n",
+       "6606  DIVERSIFICADO  COOPERATIVA  URBANA  ABIERTA  MONOLINGUE     MATUTINA   \n",
+       "\n",
+       "                                     PLAN DEPARTAMENTAL  \n",
+       "0                         DIARIO(REGULAR)  ALTA VERAPAZ  \n",
+       "1                         DIARIO(REGULAR)  ALTA VERAPAZ  \n",
+       "2                         DIARIO(REGULAR)  ALTA VERAPAZ  \n",
+       "3                         DIARIO(REGULAR)  ALTA VERAPAZ  \n",
+       "4                         DIARIO(REGULAR)  ALTA VERAPAZ  \n",
+       "...                                   ...           ...  \n",
+       "6602                      DIARIO(REGULAR)        ZACAPA  \n",
+       "6603  SEMIPRESENCIAL (UN DÍA A LA SEMANA)        ZACAPA  \n",
+       "6604                      DIARIO(REGULAR)        ZACAPA  \n",
+       "6605                      DIARIO(REGULAR)        ZACAPA  \n",
+       "6606                      DIARIO(REGULAR)        ZACAPA  \n",
+       "\n",
+       "[6607 rows x 17 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataframe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "767f4466",
    "metadata": {},
@@ -146,8 +529,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
