feat: status column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "7a2174ef",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "cb24ee2d",
    "metadata": {},
    "outputs": [],
@@ -1060,6 +1060,78 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ff0060d3",
+   "metadata": {},
+   "source": [
+    "### No es necesario transformar nada, solo realizar relleno de nan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "97fb9a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['STATUS'] = df['STATUS'].replace(r'^\\s*$', np.nan, regex=True)\n",
+    "df['STATUS'] = df['STATUS'].where(df['STATUS'].notna(), None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "59987ba2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       ABIERTA\n",
+       "1       ABIERTA\n",
+       "2       ABIERTA\n",
+       "3       ABIERTA\n",
+       "4       ABIERTA\n",
+       "         ...   \n",
+       "6602    ABIERTA\n",
+       "6603    ABIERTA\n",
+       "6604    ABIERTA\n",
+       "6605    ABIERTA\n",
+       "6606    ABIERTA\n",
+       "Name: STATUS, Length: 6607, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['STATUS']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "758d057b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(7)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['STATUS'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bcb15222",
    "metadata": {},
    "source": [
@@ -1107,7 +1179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
