feat: modalidad column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "id": "cb24ee2d",
    "metadata": {},
    "outputs": [],
@@ -1068,18 +1068,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "97fb9a19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['STATUS'] = df['STATUS'].replace(r'^\\s*$', np.nan, regex=True)\n",
-    "df['STATUS'] = df['STATUS'].where(df['STATUS'].notna(), None)"
+    "df['STATUS'] = df['STATUS'].replace(r'^\\s*$', np.nan, regex=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "id": "59987ba2",
    "metadata": {},
    "outputs": [
@@ -1100,7 +1099,7 @@
        "Name: STATUS, Length: 6607, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1111,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "758d057b",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1120,7 @@
        "np.int64(7)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,6 +1135,93 @@
    "metadata": {},
    "source": [
     "# MODALIDAD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dcd6c26",
+   "metadata": {},
+   "source": [
+    "- Verificar consistencia en mayúsculas (convertir todo a mayúsculas). \n",
+    "- Revisar posibles variantes (e.g., “Monolingüe” con tilde) y homogeneizar (reemplazar tildes: “MONOLINGUE”). \n",
+    "- Confirmar que no existan valores nulos o espacios en blanco (pasarlos a NULL). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0edd67c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Eliminar espacios y convierte a mayúsculas\n",
+    "df['MODALIDAD'] = df['MODALIDAD'].astype(str).str.strip().str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f0fcad3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quita tildes (acentos) para homogeneizar\n",
+    "df['MODALIDAD'] = df['MODALIDAD'].apply(\n",
+    "    lambda x: unicodedata\n",
+    "        .normalize('NFKD', x)\n",
+    "        .encode('ASCII', 'ignore')\n",
+    "        .decode('ASCII')\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "45954afb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Detecta cadenas vacías o sólo espacios, pásalas a NaN\n",
+    "df['MODALIDAD'] = df['MODALIDAD'].replace(r'^\\s*$', np.nan, regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "69dbfe05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MONOLINGUE' 'BILINGUE' 'NAN']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['MODALIDAD'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "2438c1f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['MODALIDAD'].isna().sum()"
    ]
   },
   {
