feat: jornada column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -1234,6 +1234,113 @@
   },
   {
    "cell_type": "markdown",
+   "id": "561f2f4e",
+   "metadata": {},
+   "source": [
+    "- Convertir todo a mayúsculas y recortar espacios (strip). \n",
+    "- Normalizar nombres (e.g., unificar “SIN JORNADA” y “SINJORNADA”). \n",
+    "- Validar categorías permitidas (hacer un “merge” con lista de categorías oficiales y asignar “OTRA” a valores inválidos o not-matched). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "87526827",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# strip + uppercase\n",
+    "df['JORNADA'] = df['JORNADA'].astype(str).str.strip().str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "f29ed1aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['MATUTINA' 'VESPERTINA' 'DOBLE' 'NOCTURNA' 'SIN JORNADA' 'NAN'\n",
+      " 'INTERMEDIA']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['JORNADA'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "37b8047e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalizar variantes conocidas\n",
+    "df['JORNADA'] = df['JORNADA'].replace({\n",
+    "    'SINJORNADA':    'SIN JORNADA',\n",
+    "    'SIN JORNADA':  'SINJORNADA',  \n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "fb63a22b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"'MATUTINA'\", \"'VESPERTINA'\", \"'DOBLE'\", \"'NOCTURNA'\", \"'SINJORNADA'\", 'nan', \"'INTERMEDIA'\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([repr(v) for v in df['JORNADA'].unique()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "4af2d698",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['JORNADA'] = (\n",
+    "    df['JORNADA']\n",
+    "    .replace('NAN', np.nan)                   \n",
+    "    .replace(r'^\\s*$', np.nan, regex=True)    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "bbe50aef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['MODALIDAD'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "36f7b729",
    "metadata": {},
    "source": [
