feat: plan column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 73,
    "id": "cb24ee2d",
    "metadata": {},
    "outputs": [],
@@ -1345,6 +1345,93 @@
    "metadata": {},
    "source": [
     "# PLAN"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dd62fbc",
+   "metadata": {},
+   "source": [
+    "- Convertir a mayúsculas y eliminar tildes (ejemplo: DÍA → DIA). \n",
+    "- Estandarizar nomenclatura de semipresencial: extraer descriptor entre paréntesis a nueva variable o bien dejar solo “SEMIPRESENCIAL” y crear columna secundaria para “PERIODICIDAD” (FIN_DE_SEMANA, UN_DIA_SEMANA, DOS_DIAS_SEMANA). \n",
+    "- Eliminar espacios redundantes y caracteres no alfanuméricos innecesarios. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "a66a4028",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DIARIO(REGULAR)' 'FIN DE SEMANA' 'A DISTANCIA' 'SEMIPRESENCIAL'\n",
+      " 'SEMIPRESENCIAL (FIN DE SEMANA)' 'SEMIPRESENCIAL (UN DÍA A LA SEMANA)'\n",
+      " 'VIRTUAL A DISTANCIA' nan 'SEMIPRESENCIAL (DOS DÍAS A LA SEMANA)'\n",
+      " 'SABATINO' 'INTERCALADO' 'DOMINICAL' 'MIXTO']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['PLAN'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "8fd88392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para quitar tildes\n",
+    "def remove_accents(s: str) -> str:\n",
+    "    return unicodedata.normalize('NFKD', s) \\\n",
+    "                      .encode('ASCII', 'ignore') \\\n",
+    "                      .decode('ASCII')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "a6b3bebc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Limpieza de la columna PLAN en sitio\n",
+    "df['PLAN'] = (\n",
+    "    df['PLAN']\n",
+    "      .astype(str)                                    \n",
+    "      .where(df['PLAN'].notna(), np.nan)              \n",
+    "      .str.strip()                                     \n",
+    "      .map(lambda x: remove_accents(x) if pd.notna(x) else x)  \n",
+    "      .str.upper()                                     \n",
+    "      .str.replace(r'\\(.*?\\)', '', regex=True)         \n",
+    "      .str.replace(r'[^A-Z0-9 ]+', '', regex=True)     \n",
+    "      .str.replace(r'\\s+', ' ', regex=True)            \n",
+    "      .str.strip()                                     \n",
+    "      .replace({'': np.nan, 'NAN': np.nan})            \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12cd9b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DIARIO' 'FIN DE SEMANA' 'A DISTANCIA' 'SEMIPRESENCIAL'\n",
+      " 'VIRTUAL A DISTANCIA' nan 'SABATINO' 'INTERCALADO' 'DOMINICAL' 'MIXTO']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['PLAN'].unique())"
    ]
   },
   {
