feat: departamental column

--- a/limpieza.ipynb
+++ b/limpieza.ipynb
@@ -1130,6 +1130,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "ae8b6e45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STATUS\n",
+       "ABIERTA    6600\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['STATUS'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bcb15222",
    "metadata": {},
@@ -1222,6 +1245,30 @@
    ],
    "source": [
     "df['MODALIDAD'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "71288736",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MODALIDAD\n",
+       "MONOLINGUE    6391\n",
+       "BILINGUE       209\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['MODALIDAD'].value_counts()"
    ]
   },
   {
@@ -1320,23 +1367,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 92,
    "id": "bbe50aef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(0)"
+       "np.int64(7)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['MODALIDAD'].isna().sum()"
+    "df['JORNADA'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "5985fbc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "JORNADA\n",
+       "DOBLE          1957\n",
+       "VESPERTINA     1836\n",
+       "MATUTINA       1687\n",
+       "SIN JORNADA    1001\n",
+       "NOCTURNA        106\n",
+       "INTERMEDIA       13\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['JORNADA'].value_counts()"
    ]
   },
   {
@@ -1435,11 +1510,159 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "00e3569b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PLAN\n",
+       "DIARIO                 4052\n",
+       "FIN DE SEMANA          1310\n",
+       "SEMIPRESENCIAL         1060\n",
+       "A DISTANCIA             116\n",
+       "VIRTUAL A DISTANCIA      52\n",
+       "SABATINO                  5\n",
+       "INTERCALADO               2\n",
+       "DOMINICAL                 2\n",
+       "MIXTO                     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['PLAN'].value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2b79e7a2",
    "metadata": {},
    "source": [
     "# DEPARTAMENTAL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b7acb0b",
+   "metadata": {},
+   "source": [
+    "- Convertir a mayúsculas y recortar espacios. \n",
+    "- Reemplazar guiones o caracteres especiales por espacios. \n",
+    "- Comparar con lista oficial de regiones y corregir discrepancias (p.ej., “GUATEMALA NORTE”). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "0d457381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DEPARTAMENTAL'] = df['DEPARTAMENTAL'].astype(str).str.strip().str.upper()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "5e787d0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reemplazar guiones o underscores por espacios, y quitar caracteres especiales\n",
+    "df['DEPARTAMENTAL'] = (\n",
+    "    df['DEPARTAMENTAL']\n",
+    "      .str.replace(r'[-_]+', ' ', regex=True)\n",
+    "      .str.replace(r'[^A-Z0-9 ]+', ' ', regex=True)\n",
+    "      .str.replace(r'\\s+', ' ', regex=True)\n",
+    "      .str.strip()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "fc9f1b0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Lista oficial de departamentos\n",
+    "official = [\n",
+    "    'ALTA VERAPAZ','BAJA VERAPAZ','CHIMALTENANGO','CHIQUIMULA','EL PROGRESO',\n",
+    "    'ESCUINTLA','GUATEMALA','HUEHUETENANGO','IZABAL','JALAPA','JUTIAPA',\n",
+    "    'PETEN','QUICHE','RETALHULEU','SACATEPEQUEZ','SANTA ROSA','SOLOLÁ',\n",
+    "    'SUCHITEPEQUEZ','TOTONICAPÁN','QUETZALTENANGO','SAN MARCOS'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "a4b653ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mapping = {\n",
+    "    'GUATEMALA NORTE': 'GUATEMALA',\n",
+    "    'GUATEMALA SUR':   'GUATEMALA',\n",
+    "    'GUATEMALA ESTE':   'GUATEMALA',\n",
+    "    'GUATEMALA OESTE':   'GUATEMALA',\n",
+    "}\n",
+    "\n",
+    "df['DEPARTAMENTAL'] = df['DEPARTAMENTAL'].replace(mapping)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "f067d02c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DEPARTAMENTAL'] = df['DEPARTAMENTAL'].where(df['DEPARTAMENTAL'].isin(official), np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7511d424",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DEPARTAMENTAL\n",
+       "GUATEMALA         1073\n",
+       "SAN MARCOS         432\n",
+       "ESCUINTLA          393\n",
+       "QUETZALTENANGO     365\n",
+       "CHIMALTENANGO      304\n",
+       "JUTIAPA            296\n",
+       "HUEHUETENANGO      295\n",
+       "ALTA VERAPAZ       294\n",
+       "IZABAL             273\n",
+       "RETALHULEU         272\n",
+       "CHIQUIMULA         136\n",
+       "SANTA ROSA         133\n",
+       "JALAPA             121\n",
+       "EL PROGRESO         97\n",
+       "BAJA VERAPAZ        94\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['DEPARTAMENTAL'].value_counts()"
    ]
   }
  ],
